--- a/success.html
+++ b/success.html
@@ -59,25 +59,48 @@
             setTimeout(createConfetti, 500);
         });
 
-        // Even scatter: reposition kisses and "I love you"; on mobile reduce overlap (fewer elements, sparser grid, offset layers)
+        // Even scatter: on mobile use safe zone (no elements over card/title/button) and fewer elements
         function applyScatter() {
             var kisses = document.querySelectorAll('.success-kisses-bg .kiss');
             var loves = document.querySelectorAll('.success-love-bg span');
             if (!kisses.length || !loves.length) return;
 
             var isMobile = window.innerWidth <= 768;
-            var minL = isMobile ? 18 : 6, maxL = isMobile ? 82 : 94;
-            var minT = isMobile ? 14 : 6, maxT = isMobile ? 86 : 94;
+            var minL = isMobile ? 12 : 6, maxL = isMobile ? 88 : 94;
+            var minT = isMobile ? 10 : 6, maxT = isMobile ? 90 : 94;
 
-            var kissCols = isMobile ? 5 : 8;
-            var loveCols = isMobile ? 4 : 6;
-            var jitter = isMobile ? 2 : 5;
-            var loveOffsetL = isMobile ? 10 : 0;
-            var loveOffsetT = isMobile ? 8 : 0;
+            // On mobile: keep center clear for photo, "Happy Valentine Day Love", and celebrate button
+            var safeZone = isMobile ? { leftMin: 24, leftMax: 76, topMin: 18, topMax: 82 } : null;
+
+            function inSafeZone(left, top) {
+                if (!safeZone) return false;
+                return left >= safeZone.leftMin && left <= safeZone.leftMax && top >= safeZone.topMin && top <= safeZone.topMax;
+            }
+
+            function positionsOutsideSafeZone(needCount, cols, jitterVal, offsetL, offsetT) {
+                offsetL = offsetL || 0;
+                offsetT = offsetT || 0;
+                var rangeL = maxL - minL, rangeT = maxT - minT;
+                var positions = [];
+                var rows = Math.max(8, Math.ceil((needCount * 5) / cols));
+                for (var r = 0; r < rows; r++) {
+                    for (var c = 0; c < cols; c++) {
+                        var baseLeft = (cols > 1) ? minL + (c / (cols - 1)) * rangeL : (minL + maxL) / 2;
+                        var baseTop = (rows > 1) ? minT + (r / (rows - 1)) * rangeT : (minT + maxT) / 2;
+                        var left = baseLeft + (Math.random() * 2 - 1) * jitterVal + offsetL;
+                        var top = baseTop + (Math.random() * 2 - 1) * jitterVal + offsetT;
+                        left = Math.max(minL, Math.min(maxL, left));
+                        top = Math.max(minT, Math.min(maxT, top));
+                        if (!inSafeZone(left, top)) positions.push({ left: left, top: top });
+                    }
+                }
+                return positions.slice(0, needCount);
+            }
 
             function evenGridPositions(count, cols, jitterVal, offsetL, offsetT) {
                 offsetL = offsetL || 0;
                 offsetT = offsetT || 0;
+                if (safeZone) return positionsOutsideSafeZone(count, cols, jitterVal, offsetL, offsetT);
                 var rows = Math.ceil(count / cols);
                 var rangeL = maxL - minL, rangeT = maxT - minT;
                 var positions = [];
@@ -93,13 +116,19 @@
                 return positions;
             }
 
+            var kissCols = isMobile ? 6 : 8;
+            var loveCols = isMobile ? 5 : 6;
+            var jitter = isMobile ? 2 : 5;
+            var loveOffsetL = isMobile ? 8 : 0;
+            var loveOffsetT = isMobile ? 6 : 0;
+
             if (isMobile) {
-                var kissCount = Math.ceil(kisses.length / 2);
-                var loveCount = Math.ceil(loves.length / 2);
+                var kissCount = Math.min(18, Math.ceil(kisses.length / 2));
+                var loveCount = Math.min(12, Math.ceil(loves.length / 2));
                 var kissPositions = evenGridPositions(kissCount, kissCols, jitter, 0, 0);
                 var lovePositions = evenGridPositions(loveCount, loveCols, jitter, loveOffsetL, loveOffsetT);
                 for (var k = 0; k < kisses.length; k++) {
-                    kisses[k].style.display = (k % 2 === 0) ? '' : 'none';
+                    kisses[k].style.display = (k % 2 === 0 && k / 2 < kissCount) ? '' : 'none';
                     if (k % 2 === 0 && k / 2 < kissPositions.length) {
                         var pos = kissPositions[k / 2];
                         kisses[k].style.left = pos.left + '%';
@@ -107,7 +136,7 @@
                     }
                 }
                 for (var L = 0; L < loves.length; L++) {
-                    loves[L].style.display = (L % 2 === 0) ? '' : 'none';
+                    loves[L].style.display = (L % 2 === 0 && L / 2 < loveCount) ? '' : 'none';
                     if (L % 2 === 0 && L / 2 < lovePositions.length) {
                         var pos = lovePositions[L / 2];
                         loves[L].style.left = pos.left + '%';
