--- a/success.html
+++ b/success.html
@@ -59,74 +59,49 @@
             setTimeout(createConfetti, 500);
         });
 
-        // Even scatter: on mobile use safe zone (no elements over card/title/button) and fewer elements
+        // Straight-line grid: kisses and "I love you" in neat rows/columns, no overlap. Mobile: safe zone in center.
         function applyScatter() {
             var kisses = document.querySelectorAll('.success-kisses-bg .kiss');
             var loves = document.querySelectorAll('.success-love-bg span');
             if (!kisses.length || !loves.length) return;
 
             var isMobile = window.innerWidth <= 768;
-            var minL = isMobile ? 12 : 6, maxL = isMobile ? 88 : 94;
-            var minT = isMobile ? 10 : 6, maxT = isMobile ? 90 : 94;
+            var minL = isMobile ? 10 : 5, maxL = isMobile ? 90 : 95;
+            var minT = isMobile ? 8 : 5, maxT = isMobile ? 92 : 95;
 
-            // On mobile: keep center clear for photo, "Happy Valentine Day Love", and celebrate button
-            var safeZone = isMobile ? { leftMin: 24, leftMax: 76, topMin: 18, topMax: 82 } : null;
+            var safeZone = isMobile ? { leftMin: 22, leftMax: 78, topMin: 16, topMax: 84 } : null;
 
             function inSafeZone(left, top) {
                 if (!safeZone) return false;
                 return left >= safeZone.leftMin && left <= safeZone.leftMax && top >= safeZone.topMin && top <= safeZone.topMax;
             }
 
-            function positionsOutsideSafeZone(needCount, cols, jitterVal, offsetL, offsetT) {
-                offsetL = offsetL || 0;
-                offsetT = offsetT || 0;
+            // Strict grid: straight lines, no jitter. If skipSafeZone, only use points outside center.
+            function straightGrid(needCount, cols, skipSafeZone) {
                 var rangeL = maxL - minL, rangeT = maxT - minT;
                 var positions = [];
-                var rows = Math.max(8, Math.ceil((needCount * 5) / cols));
+                var rows = Math.max(4, Math.ceil((skipSafeZone ? needCount * 2 : needCount) / cols));
                 for (var r = 0; r < rows; r++) {
                     for (var c = 0; c < cols; c++) {
-                        var baseLeft = (cols > 1) ? minL + (c / (cols - 1)) * rangeL : (minL + maxL) / 2;
-                        var baseTop = (rows > 1) ? minT + (r / (rows - 1)) * rangeT : (minT + maxT) / 2;
-                        var left = baseLeft + (Math.random() * 2 - 1) * jitterVal + offsetL;
-                        var top = baseTop + (Math.random() * 2 - 1) * jitterVal + offsetT;
-                        left = Math.max(minL, Math.min(maxL, left));
-                        top = Math.max(minT, Math.min(maxT, top));
-                        if (!inSafeZone(left, top)) positions.push({ left: left, top: top });
+                        var left = (cols > 1) ? minL + (c / (cols - 1)) * rangeL : (minL + maxL) / 2;
+                        var top = (rows > 1) ? minT + (r / (rows - 1)) * rangeT : (minT + maxT) / 2;
+                        if (skipSafeZone && inSafeZone(left, top)) continue;
+                        positions.push({ left: left, top: top });
+                        if (positions.length >= needCount) return positions;
                     }
                 }
                 return positions.slice(0, needCount);
             }
 
-            function evenGridPositions(count, cols, jitterVal, offsetL, offsetT) {
-                offsetL = offsetL || 0;
-                offsetT = offsetT || 0;
-                if (safeZone) return positionsOutsideSafeZone(count, cols, jitterVal, offsetL, offsetT);
-                var rows = Math.ceil(count / cols);
-                var rangeL = maxL - minL, rangeT = maxT - minT;
-                var positions = [];
-                for (var i = 0; i < count; i++) {
-                    var c = i % cols;
-                    var r = Math.floor(i / cols);
-                    var baseLeft = (cols > 1) ? minL + (c / (cols - 1)) * rangeL : (minL + maxL) / 2;
-                    var baseTop = (rows > 1) ? minT + (r / (rows - 1)) * rangeT : (minT + maxT) / 2;
-                    var left = baseLeft + (Math.random() * 2 - 1) * jitterVal + offsetL;
-                    var top = baseTop + (Math.random() * 2 - 1) * jitterVal + offsetT;
-                    positions.push({ left: Math.max(minL, Math.min(maxL, left)), top: Math.max(minT, Math.min(maxT, top)) });
-                }
-                return positions;
-            }
-
-            var kissCols = isMobile ? 6 : 8;
-            var loveCols = isMobile ? 5 : 6;
-            var jitter = isMobile ? 2 : 5;
-            var loveOffsetL = isMobile ? 8 : 0;
-            var loveOffsetT = isMobile ? 6 : 0;
+            var kissCols = isMobile ? 5 : 8;
+            var loveCols = isMobile ? 4 : 6;
 
             if (isMobile) {
-                var kissCount = Math.min(18, Math.ceil(kisses.length / 2));
+                var kissCount = Math.min(16, Math.ceil(kisses.length / 2));
                 var loveCount = Math.min(12, Math.ceil(loves.length / 2));
-                var kissPositions = evenGridPositions(kissCount, kissCols, jitter, 0, 0);
-                var lovePositions = evenGridPositions(loveCount, loveCols, jitter, loveOffsetL, loveOffsetT);
+                var kissPositions = straightGrid(kissCount, kissCols, true);
+                var lovePositions = straightGrid(loveCount, loveCols, true);
+
                 for (var k = 0; k < kisses.length; k++) {
                     kisses[k].style.display = (k % 2 === 0 && k / 2 < kissCount) ? '' : 'none';
                     if (k % 2 === 0 && k / 2 < kissPositions.length) {
@@ -144,8 +119,8 @@
                     }
                 }
             } else {
-                var kissPositions = evenGridPositions(kisses.length, kissCols, jitter, 0, 0);
-                var lovePositions = evenGridPositions(loves.length, loveCols, jitter, loveOffsetL, loveOffsetT);
+                var kissPositions = straightGrid(kisses.length, kissCols, false);
+                var lovePositions = straightGrid(loves.length, loveCols, false);
                 kissPositions.forEach(function(pos, i) {
                     kisses[i].style.display = '';
                     kisses[i].style.left = pos.left + '%';
